Prevent overflowing text

--- a/public/css/todo-list.css
+++ b/public/css/todo-list.css
@@ -22,9 +22,12 @@
   box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
   color: rgba(255, 255, 255, 0.8);
+  overflow-x: hidden;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
+  overflow-wrap: anywhere;
+  white-space: pre-line;
 }
 
 #todo-list::-webkit-scrollbar {
@@ -73,6 +76,7 @@
   color: white;
   font-size: 1.2rem;
   cursor: pointer;
+  margin: 0 5px 0 10px;
 }
 
 #todo-list button:hover {
